--- a/inputrapat.html
+++ b/inputrapat.html
@@ -190,58 +190,58 @@
               </li>
               <li><a class="flex font-medium text-xs text-coolGray-500 hover:text-coolGray-700" href="#">Lorem Ipsum</a></li>
             </ul>
-            <h2 class="font-semibold text-black text-3xl">Input Rapat RTM</h2>
           </div>
         </div>
       </section>
     <section class="bg-coolGray-50 py-4">
-        <div class="bg-grey-lighter min-h-screen flex flex-col">
-                <div class="bg-white px-6 py-8 rounded shadow-md text-black w-full">
-                    <h1 class="font-semibold text-black text-3xl">Data Rapat RTM</h1><br>
-                    <form id="rapat">
-                        <p class=" text-black">Nama Rapat :
-                        <input 
-                        type="text"
-                        class="block border border-grey-light w-full p-2 mb-4"
-                        name="nama"
-                        placeholder="Masukan Nama Rapat" />
-                    </p>
-                    <form id="rapat">
-                        <p class=" text-black">Jenis Rapat :
-                        <input 
-                        type="text"
-                        class="block border border-grey-light w-full p-2 mb-4"
-                        name="jenis"
-                        placeholder="" />
-                    </p>
+      <div class="container mx-auto px-3">
+        <h1 class="text-2xl font-bold mb-4">Input Data Rapat</h1>
+        <!-- Form Input -->
+        <form>
+            <div class="flex flex-wrap -mx-3 mb-5">
+                <div class="w-full px-3">
+                    <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="nama-rapat">
+                        Nama Rapat
+                    </label>
+                    <input class="appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 leading-tight focus:outline-none focus:bg-white focus:border-gray-500" id="nama-rapat" type="text" placeholder="Masukkan nama rapat">
+                </div>
+            </div>
 
-                    <form id="rapat">
-                        <p class=" text-black">No Tulis :
-                        <input 
-                        type="text"
-                        class="block border border-grey-light w-full p-2 mb-4"
-                        name="notulis"
-                        placeholder="" />
-                    </p>
+            <div class="flex flex-wrap -mx-3 mb-6">
+                <div class="w-full px-3">
+                    <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="tanggal-rapat">
+                        Tanggal Rapat
+                    </label>
+                    <input class="appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 leading-tight focus:outline-none focus:bg-white focus:border-gray-500" id="tanggal-rapat" type="date">
+                </div>
+            </div>
 
-                    <form id="rapat">
-                        <p class=" text-black">Jadwal Rapat :
-                        <input 
-                        type="text"
-                        class="block border border-grey-light w-full p-2 mb-4"
-                        name="firstname"
-                        placeholder="" />
-                    </p>
-                    <button >                     
-                         <a class="inline-block py-2 px-4 w-full text-center leading-5 text-white bg-coolGray-500 hover:bg-coolGray-600 font-medium text-center focus:ring-2 focus:ring-coolGray-500 focus:ring-opacity-50 rounded-md" href="#" data-config-id="auto-txt-12-1" id="submit">Input</a>
-                    </button>
-                    <!-- <button
-                        type="submit"
-                        class="w-full text-center py-3 rounded bg-green text-white hover:bg-green-dark focus:outline-none my-1"
-                        id="submit">Create Account</button> -->
-                    </form>
-    
+            <div class="flex flex-wrap -mx-3 mb-6">
+                <div class="w-full px-3">
+                    <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="lokasi-rapat">
+                        Lokasi Rapat
+                    </label>
+                    <input class="appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 leading-tight focus:outline-none focus:bg-white focus:border-gray-500" id="lokasi-rapat" type="text" placeholder="Masukkan lokasi rapat">
+                </div>
+            </div>
+
+            <div class="flex flex-wrap -mx-3 mb-6">
+                <div class="w-full px-3">
+                    <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="agenda-rapat">
+                        Agenda Rapat
+                    </label>
+                    <textarea class="appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 leading-tight focus:outline-none focus:bg-white focus:border-gray-500" id="agenda-rapat" rows="4" placeholder="Masukkan agenda rapat"></textarea>
+                </div>
+            </div>
+
+            <div class="flex-wrap">
+                <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" type="button">
+                    Simpan
+                </button>
+            </div>
+        </form>
     </div>
+    </section>
     <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
     <script src="js/charts-demo.js"></script>
 </body>
