--- a/pemkar.html
+++ b/pemkar.html
@@ -194,7 +194,9 @@
             <div class="py-20 bg-gray-50">
                 <div class="container mx-auto px-6 md:px-12 xl:px-32">
                     <div class="mb-16 text-center">
-                        <h2 class="mb-4 text-center text-2xl text-gray-900 font-bold md:text-4xl">OUR SPEAKER</h2>
+                        <h1 class="mb-4 text-center text-2xl text-gray-900 font-bold md:text-4xl">PEMATERI DAN KEHADIRAN</h1>
+                        <br>
+                        <h3 class="mb-4 text-center text-2xl text-gray-900 font-bold md:text-4xl">OUR SPEAKER</h3>
                     </div>
                     <div class="grid gap-12 items-center md:grid-cols-3">
                         <div class="space-y-4 text-center">
@@ -228,7 +230,7 @@
             <div class="min-w-screen min-h-screen bg-gray-900 flex items-center justify-center px-5 py-5">
                 <div class="bg-gray-800 text-gray-500 rounded shadow-xl py-5 px-5 w-full sm:w-2/3 md:w-1/2 lg:w-1/3" x-data="{cardOpen:false,cardData:cardData()}" x-init="$watch('cardOpen', value => value?(cardData.countUp($refs.total,0,11602,null,0.8),cardData.sessions.forEach((el,i) => cardData.countUp($refs[`device${i}`],0,cardData.sessions[i].size,null,1.6))):null);setTimeout(()=>{cardOpen=true},100)">
                     <div class="flex w-full">
-                        <h3 class="text-lg font-semibold leading-tight flex-1">TOTAL SESSIONS</h3>
+                        <h3 class="text-lg font-semibold leading-tight flex-1">KEHADIRAN</h3>
                         <div class="relative h-5 leading-none">
                             <button class="text-xl text-gray-500 hover:text-gray-300 h-6 focus:outline-none" @click.prevent="cardOpen=!cardOpen">
                                 <i class="mdi" :class="'mdi-chevron-'+(cardOpen?'up':'down')"></i>
