--- a/listrapat.html
+++ b/listrapat.html
@@ -144,7 +144,7 @@
                 </a>
               </li>
               <li>
-                <a class="p-3 py-4 flex items-center justify-between text-coolGray-600 hover:text-green-500 hover:bg-coolGray-800 rounded-md" href="#">
+                <a class="p-3 py-4 flex items-center justify-between text-coolGray-600 hover:text-green-500 hover:bg-coolGray-800 rounded-md" href="pengaturanaplikasi.html">
                   <div class="flex items-center">
                     <svg class="mr-2" width="24" height="24" viewbox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                       <path
